using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class PlayerConstants
{
    public static class AnimationTriggers
    {
        public const string SitDown = "sitDown";
        public const string StandUp = "standUp";
        public const string Hurted = "hurted";
    }
}
